--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Web Design</h3>
 							<div class="iconbox-desc">
-								Over the past year I have worked with HTML 5, CSS, JavaScript and Bootstrap
+								Over the past three years, I have worked with HTML 5, CSS, JavaScript, JQuery and Bootstrap
 							</div>
 						</div>
 					</div>
@@ -134,7 +134,7 @@
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Graphic Design</h3>
 							<div class="iconbox-desc">
-								I have created a number of graphics and designs using Adobe Photoshop, Illustrator and InDesign
+								I have been producing custom graphics and designs using Adobe Photoshop, Illustrator and InDesign for the past 4 years
 							</div>
 						</div>
 					</div>
@@ -150,7 +150,7 @@
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Video Tutorials</h3>
 							<div class="iconbox-desc">
-								I have created, recorded and published a series of training videos
+								I have created a series of training videos by filming, scripting, recording and publishing them
 							</div>
 						</div>
 					</div>
@@ -166,7 +166,7 @@
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">UI / UX</h3>
 							<div class="iconbox-desc">
-								I have developed many prototypes with UX and UI in mind alongside a number of crossfunctional teams
+								I have designed a number of user interfaces for digital products considering their appearance, functionality, and content
 							</div>
 						</div>
 					</div>
