--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<div class="intro">
 			<div class="start">My name is Laura Hillier and I am a</div>
 			<h1>Web Developer / Designer</h1>
-			<div class="start">studying at Conestoga College</div>
+			<div class="start">IT Innovation & Design Graduate - Conestoga College</div>
 		</div>
 
         <a href="#services">
