--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="home-overlay"></div>
 		<div class="intro">
 			<div class="start">My name is Laura Hillier and I am a</div>
-			<h1>Web Developer / Designer</h1>
+			<h1>Web Developer / Graphic Designer</h1>
 			<div class="start">IT Innovation & Design Graduate - Conestoga College</div>
 		</div>
 
