--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						<li><a href="#home">Home</a></li>
 						<li><a href="#services">What I Do</a></li>
                         <li><a href="#portfolio">Work</a></li>
-                        <li><a href="#skills">Skills</a></li>
+                        <li><a href="#skills">Accomplishments</a></li>
 						<li><a href="#testimonials">What Others are Saying</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
