--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 
 	<!-- Testimonials start -->
 
-	<section id="testimonials" class="pfblock pfblock-gray">
+	<section id="testimonials" class="pfblock">
 
 		<div class="container">
             
@@ -393,7 +393,7 @@
 
 	<!-- Contact start -->
 
-	<section id="contact" class="pfblock">
+	<section id="contact" class="pfblock pfblock-gray">
 		<div class="container">
 			<div class="row">
 
