--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 						<h2 class="pfblock-title">Drop me a line</h2>
 						<div class="pfblock-line"></div>
 						<div class="pfblock-subtitle">
-							Feel free to send me an email. If you'd like to collaborate, or if you have any questions about my work, I'd love to hear from you!
+							Feel free to send me an email if you'd like to collaborate, or if you have any questions about my work. I'd love to hear from you!
 						</div>
 					</div>
 
@@ -415,26 +415,10 @@
 
 				<div class="col-sm-6 col-sm-offset-3">
 
-					<form id="contact-form" role="form">
-						<div class="ajax-hidden">
-							<div class="form-group wow fadeInUp">
-								<label class="sr-only" for="c_name">Name</label>
-								<input type="text" id="c_name" class="form-control" name="c_name" placeholder="Name">
-							</div>
+					Email: <a href="mailto:laurahillier@ymail.com?subject=Hey Laura!" class="wow fadeInUp" data-wow-delay=".5s">laurahillier@ymail.com</a>
 
-							<div class="form-group wow fadeInUp" data-wow-delay=".1s">
-								<label class="sr-only" for="c_email">Email</label>
-								<input type="email" id="c_email" class="form-control" name="c_email" placeholder="E-mail">
-							</div>
 
-							<div class="form-group wow fadeInUp" data-wow-delay=".2s">
-								<textarea class="form-control" id="c_message" name="c_message" rows="7" placeholder="Message"></textarea>
-							</div>
 
-							<a href="mailto:laurahillier@ymail.com?subject=Hey Laura!&body=Laura! This site is so awesome! How did you do it? Golly!" class="wow fadeInUp" data-wow-delay=".5s"><button type="submit" class="btn btn-lg btn-block wow fadeInUp" data-wow-delay=".3s">Send Message</button></a>
-						</div>
-						<div class="ajax-response"></div>
-					</form>
 
 				</div>
 
