--- a/index.html
+++ b/index.html
@@ -404,6 +404,8 @@
 						<div class="pfblock-line"></div>
 						<div class="pfblock-subtitle">
 							Feel free to send me an email if you'd like to collaborate, or if you have any questions about my work. I'd love to hear from you!
+							<p>Email: <a href="mailto:laurahillier@ymail.com?subject=Hey Laura!" class="wow fadeInUp" data-wow-delay=".5s">laurahillier@ymail.com</a>
+</p>
 						</div>
 					</div>
 
@@ -413,14 +415,7 @@
 
 			<div class="row">
 
-				<div class="col-sm-6 col-sm-offset-3">
 
-					Email: <a href="mailto:laurahillier@ymail.com?subject=Hey Laura!" class="wow fadeInUp" data-wow-delay=".5s">laurahillier@ymail.com</a>
-
-
-
-
-				</div>
 
 			</div><!-- .row -->
 		</div><!-- .container -->
