--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 						<div class="pfblock-line"></div>
 						<div class="pfblock-subtitle">
 							Feel free to send me an email if you'd like to collaborate, or if you have any questions about my work. I'd love to hear from you!
-							<p>Email: <a href="mailto:laurahillier@ymail.com?subject=Hey Laura!" class="wow fadeInUp" data-wow-delay=".5s">laurahillier@ymail.com</a>
+							<br /><p><a href="mailto:laurahillier@ymail.com?subject=Hey Laura!" class="wow fadeInUp" data-wow-delay=".5s">laurahillier@ymail.com</a>
 </p>
 						</div>
 					</div>
@@ -430,14 +430,6 @@
 			<div class="row">
 
 				<div class="col-sm-12">
-
-					<ul class="social-links">
-						<li><a href="https://www.facebook.com/lauraquinhillier" target="_top" class="wow fadeInUp"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="https://www.twitter.com" class="wow fadeInUp" data-wow-delay=".1s"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="https://www.google.ca" class="wow fadeInUp" data-wow-delay=".2s"><i class="fa fa-google-plus"></i></a></li>
-						<li><a href="https://www.pinterest.com" class="wow fadeInUp" data-wow-delay=".4s"><i class="fa fa-pinterest"></i></a></li>
-						<li><a href="mailto:laurahillier@ymail.com?subject=Hey Laura!" class="wow fadeInUp" data-wow-delay=".5s"><i class="fa fa-envelope"></i></a></li>
-					</ul>
 
 					<p class="heart">
                         <span class="fa fa-heart fa-2x animated pulse"></span>
