--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 					<div class="iconbox wow slideInLeft">
 						<div class="iconbox-icon">
-							<span class="icon-magic-wand"></span>
+							<span class="icon-web-browser"></span>
 						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Web Design</h3>
@@ -129,7 +129,7 @@
 
 					<div class="iconbox wow slideInLeft">
 						<div class="iconbox-icon">
-							<span class="icon-puzzle"></span>
+							<span class="icon-picture"></span>
 						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Graphic Design</h3>
@@ -145,7 +145,7 @@
 
 					<div class="iconbox wow slideInRight">
 						<div class="iconbox-icon">
-							<span class="icon-badge"></span>
+							<span class="icon-film"></span>
 						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Video Tutorials</h3>
@@ -161,7 +161,7 @@
 
 					<div class="iconbox wow slideInRight">
 						<div class="iconbox-icon">
-							<span class="icon-question"></span>
+							<span class="icon-iphone-shake"></span>
 						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">UI / UX</h3>
@@ -320,70 +320,46 @@
                     </div>
                     <div class="row">
 
-				<div class="col-sm-3">
+				<div class="col-sm-4">
 
 					<div class="iconbox wow slideInLeft">
 						<div class="iconbox-icon">
-							<span class="icon-magic-wand"></span>
+							<span class="icon-certificate"></span>
 						</div>
 						<div class="iconbox-text">
-							<h3 class="iconbox-title">Web Design</h3>
-							<div class="iconbox-desc">
-								Over the past three years, I have worked with HTML 5, CSS, JavaScript, JQuery and Bootstrap
-							</div>
+							<h3 class="iconbox-title">Graduating!!!</h3>
 						</div>
 					</div>
 
 				</div>
 
-				<div class="col-sm-3">
+				<div class="col-sm-4">
 
 					<div class="iconbox wow slideInLeft">
 						<div class="iconbox-icon">
-							<span class="icon-puzzle"></span>
+							<span class="icon-list"></span>
 						</div>
 						<div class="iconbox-text">
-							<h3 class="iconbox-title">Graphic Design</h3>
-							<div class="iconbox-desc">
-								I have been producing custom graphics and designs using Adobe Photoshop, Illustrator and InDesign for the past 4 years
-							</div>
+							<h3 class="iconbox-title">Making the Dean's List</h3>
 						</div>
 					</div>
 
 				</div>
 
-				<div class="col-sm-3">
+				<div class="col-sm-4">
 
 					<div class="iconbox wow slideInRight">
 						<div class="iconbox-icon">
-							<span class="icon-badge"></span>
+							<span class="icon-cup"></span>
 						</div>
 						<div class="iconbox-text">
-							<h3 class="iconbox-title">Video Tutorials</h3>
-							<div class="iconbox-desc">
-								I have created a series of training videos by filming, scripting, recording and publishing them
-							</div>
+							<h3 class="iconbox-title">Winning 'Best Final Year Project' Award</h3>
 						</div>
 					</div>
 
 				</div>
 
-				<div class="col-sm-3">
-
-					<div class="iconbox wow slideInRight">
-						<div class="iconbox-icon">
-							<span class="icon-question"></span>
-						</div>
-						<div class="iconbox-text">
-							<h3 class="iconbox-title">UI / UX</h3>
-							<div class="iconbox-desc">
-								I have designed a number of user interfaces for digital products considering their appearance, functionality, and content
-							</div>
-						</div>
-					</div>
-
-				</div>
-
+				
 			</div><!-- .row -->
 			
 			</div>
