--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 
 					<div class="iconbox wow slideInLeft">
 						<div class="iconbox-icon">
-							<span class="icon-certificate"></span>
+							<span class="icon-star-empty"></span>
 						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Graduating!!!</h3>
@@ -350,7 +350,7 @@
 
 					<div class="iconbox wow slideInRight">
 						<div class="iconbox-icon">
-							<span class="icon-cup"></span>
+							<span class="icon-thumbs-up"></span>
 						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Winning 'Best Final Year Project' Award</h3>
