--- a/index.html
+++ b/index.html
@@ -323,6 +323,9 @@
 				<div class="col-sm-4">
 
 					<div class="iconbox wow slideInLeft">
+						<div class="iconbox-icon">
+							<span class="icon-web-browser"></span>
+						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Graduating!!!</h3>
 						</div>
@@ -333,6 +336,9 @@
 				<div class="col-sm-4">
 
 					<div class="iconbox wow slideInLeft">
+						<div class="iconbox-icon">
+							<span class="icon-web-browser"></span>
+						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Making the Dean's List</h3>
 						</div>
@@ -343,6 +349,9 @@
 				<div class="col-sm-4">
 
 					<div class="iconbox wow slideInRight">
+						<div class="iconbox-icon">
+							<span class="icon-web-browser"></span>
+						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Winning 'Best Final Year Project' Award</h3>
 						</div>
