--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 					<div class="iconbox wow slideInLeft">
 						<div class="iconbox-icon">
-							<span class="icon-display"></span>
+							<span class="icon-heart"></span>
 						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Web Design</h3>
@@ -161,7 +161,7 @@
 
 					<div class="iconbox wow slideInRight">
 						<div class="iconbox-icon">
-							<span class="icon-ipad"></span>
+							<span class="icon-puzzle"></span>
 						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">UI / UX</h3>
