--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 						<div class="pfblock-line"></div>
 						<div class="pfblock-subtitle">
 							Feel free to send me an email if you'd like to collaborate, or if you have any questions about my work. I'd love to hear from you!
-							<br /><p><a href="mailto:laurahillier@ymail.com?subject=Hey Laura!" class="wow fadeInUp" data-wow-delay=".5s">laurahillier@ymail.com</a>
+							<br /><br /><p><a href="mailto:laurahillier@ymail.com?subject=Hey Laura!" class="wow fadeInUp" data-wow-delay=".5s">laurahillier@ymail.com</a>
 </p>
 						</div>
 					</div>
