--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             
                     <div class="grid wow zoomIn">
                         <figure class="effect-bubba">
-                            <img src="https://cloud.githubusercontent.com/assets/8714569/10213109/d4a8b570-67d6-11e5-85ba-e66213dc0cbf.png" />
+                            <a href="" data-toggle="modal" data-target="#myModal2"><img src="https://cloud.githubusercontent.com/assets/8714569/10213109/d4a8b570-67d6-11e5-85ba-e66213dc0cbf.png" /></a>
                             <figcaption>
                                 <h2>Build a <span>Necklace</span></h2>
                                 <p>Drag and Drop Designer</p>
