--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             
                     <div class="grid wow zoomIn">
                         <figure class="effect-bubba">
-                            <a href="" data-toggle="modal" data-target="#myModal2"><img src="https://cloud.githubusercontent.com/assets/8714569/10213109/d4a8b570-67d6-11e5-85ba-e66213dc0cbf.png" /></a>
+                            <img src="https://cloud.githubusercontent.com/assets/8714569/10213109/d4a8b570-67d6-11e5-85ba-e66213dc0cbf.png" />
                             <figcaption>
                                 <h2>Build a <span>Necklace</span></h2>
                                 <p>Drag and Drop Designer</p>
@@ -312,7 +312,8 @@
           <h4 class="modal-title">Modal Header</h4>
         </div>
         <div class="modal-body">
-          <p>Some text in the modal.</p>
+        <p>For my final year project in college, I worked with a small team to redesign and develop a working prototype for the Motivation Minders Website. Our solution was created in Visual Studio using HTML, CSS, JavaScript, Jquery, ASP.NET, MVC, SQL and Bootstrap.</p>
+
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
