--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Modal Header</h4>
+          <h4 class="modal-title">Motivation Minders Website Redesign</h4>
         </div>
         <div class="modal-body">
         <p>For my final year project in college, I worked with a small team to redesign and develop a working prototype for the Motivation Minders Website. Our solution was created in Visual Studio using HTML, CSS, JavaScript, Jquery, ASP.NET, MVC, SQL and Bootstrap.</p>
@@ -340,10 +340,10 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">2</h4>
+          <h4 class="modal-title">Spark</h4>
         </div>
         <div class="modal-body">
-          <p>Some text in the modal.</p>
+   	<p>I have developed internal courses and training materials for existing employees and new hires. Mockups and wireframes were developed in Photoshop, and content was created with HTML and CSS.</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -370,10 +370,10 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">3</h4>
+          <h4 class="modal-title">Newsletters</h4>
         </div>
         <div class="modal-body">
-          <p>Some text in the modal.</p>
+        <p>I was the editor of a monthly newsletter. I was tasked with collecting, editing, and writing articles, as well as organizing, publishing and distributing the newsletter. I also designed a new interactive template for future releases. Articles were created using the Microsoft Office Suite, and the interactive Template was created using HTML, CSS, JavaScript and Bootstrap.</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -400,10 +400,10 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">4</h4>
+          <h4 class="modal-title">The Hub</h4>
         </div>
         <div class="modal-body">
-          <p>Some text in the modal.</p>
+        <p>The Hub is an internal website that I have developed over the course of a year. I have built the interactive Landing Page as well as many content pieces and web pages. For the main landing page and additional web pages, I used HTML, CSS, JavaScript, Jquery, and Bootstrap.</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -430,10 +430,10 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">5</h4>
+          <h4 class="modal-title">Brightspace</h4>
         </div>
         <div class="modal-body">
-          <p>Some text in the modal.</p>
+          <p>I have developed a custom video player using HTML and JavaScript, and I have produced a series of training videos that instructed staff on how to create their own content topics. For the videos, I used Windows Movie Maker and the Lync recording software.</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -460,10 +460,10 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">6</h4>
+          <h4 class="modal-title">Build a Charm</h4>
         </div>
         <div class="modal-body">
-          <p>Some text in the modal.</p>
+        <p>The interactive Build a Charm application is from the Motivation Minders Website. Shoppers are able to choose a locket and drag and drop different charms inside to create their own jewelry! I created this feature of the website using HTML, Javascript and a number of Jquery plugins.</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
