--- a/index.html
+++ b/index.html
@@ -212,6 +212,8 @@
                                 <p>Website Redesign</p>
                             </figcaption>			
                         </figure>
+                          <!-- Trigger the modal with a button -->
+  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Test</button>
                     </div>
                     
                 </div>
@@ -296,11 +298,6 @@
 	<!-- Portfolio end -->
 <!-- Modal 1 -->	
 	<div class="container">
-  
-  <!-- Trigger the modal with a button -->
-  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
-
-
   <!-- Modal -->
   <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
