--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
                 <div class="col-xs-12 col-sm-4 col-md-4">
                     
                     <div class="grid wow zoomIn">
-                        <figure class="effect-bubba">
+                        <button type="button" data-toggle="modal" data-target="#myModal">
+                        	<figure class="effect-bubba">
                             <img src="https://cloud.githubusercontent.com/assets/8714569/10212998/48e83dcc-67d5-11e5-90df-b2869ec62cde.png" />
                             <figcaption>
                                 <h2>Motivation <span>Minders</span></h2>
@@ -213,7 +214,7 @@
                             </figcaption>			
                         </figure>
                           <!-- Trigger the modal with a button -->
-  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Test</button>
+  </button>
                     </div>
                     
                 </div>
