--- a/index.html
+++ b/index.html
@@ -222,6 +222,8 @@
                 <div class="col-xs-12 col-sm-4 col-md-4">
             
                     <div class="grid wow zoomIn">
+                    	  <!-- Trigger the modal with a button -->
+  <a data-toggle="modal" data-target="#myModal2">
                         <figure class="effect-bubba">
                             <img src="https://cloud.githubusercontent.com/assets/8714569/10213029/9996559c-67d5-11e5-8de5-9f86a5a7396a.png" />
                             <figcaption>
@@ -229,6 +231,7 @@
                                 <p>Interactive Landing Page</p>
                             </figcaption>			
                         </figure>
+                        </a>
                     </div>
                     
                 </div>
@@ -326,10 +329,6 @@
 
 <!-- Modal 2-->
 <div class="container">
-  
-  <!-- Trigger the modal with a button -->
-  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal2">Open Modal</button>
-
   <!-- Modal -->
   <div class="modal fade" id="myModal2" role="dialog">
     <div class="modal-dialog">
