--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<-- <a class="navbar-brand" href="index.html">Laura Hillier</a> -->
+					<!-- <a class="navbar-brand" href="index.html">Laura Hillier</a> -->
 					<a href="index.html">Laura Hillier</a>
 				</div>
 
